--- a/scss/main.scss
+++ b/scss/main.scss
@@ -89,12 +89,12 @@ body {
             .name {
                 color: #14A3C7;
                 font-size: 2rem;
-                margin-bottom: -4rem;
+                margin-bottom: -2rem;
             }
     
             .temperature {
-                font-size: 5rem;
-                margin-bottom: -1.5rem;
+                font-size: 3.5rem;
+                margin-bottom: .5rem;
             }
     
             .feeling {
